testsuite/tests/th/T17820a.stderr

T17820a.hs:7:17: error: [GHC-18157]
    GHC stage restriction:
      ‘C’ is used in a top-level splice, quasi-quote, or annotation,
      and must be imported, not defined locally
